Add response content for all GETs and errors
